--- a/src/main/webapp/src/app/compare-data/compare-data.component.scss
+++ b/src/main/webapp/src/app/compare-data/compare-data.component.scss
@@ -27,6 +27,13 @@ mat-selection-list {
     overflow: auto;
 }
 
+
+table {
+    vertical-align: top;
+    width: 100%;
+    overflow: auto;
+}
+
 .igUsers {
   margin: 0 0 2em 0;
   list-style-type: none;
