Added routing for nav menu and updated UI for result-list - Also added help component but not configured yet

--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -1,2 +1,6 @@
 <h1>{{ title }}</h1>
-<app-ig-main></app-ig-main>
+<nav>
+  <a routerLink="/view">Main Screen</a>
+  <a routerLink="/help">Help</a>
+</nav>
+<router-outlet></router-outlet>
