--- a/src/main/webapp/src/app/app.component.scss
+++ b/src/main/webapp/src/app/app.component.scss
@@ -23,4 +23,19 @@ body, input[type="text"], button {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
+nav a {
+  padding: 1rem;
+  text-decoration: none;
+  margin-left: 10px;
+  display: inline-block;
+  background-color: #e8e8e8;
+  color: #3d3d3d;
+  border-radius: 4px;
+}
+nav a:hover {
+  color: white;
+  background-color: #42545C;
+}
+nav a:active {
+  background-color: black;
+}
