--- a/src/main/webapp/src/app/result-list/result-list.component.html
+++ b/src/main/webapp/src/app/result-list/result-list.component.html
@@ -1,7 +1,28 @@
+<!--
 <div>
   <ul class="displayList">
     <li *ngFor="let item of displayList; let i = index;">
       <span class="badge">{{i+1}}</span>{{item}}
     </li>
   </ul>
+</div>
+-->
+
+<div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef>Username</th>
+        <td mat-cell *matCellDef="let element"> {{ element }} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnDefs"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnDefs;"></tr>
+
+    </table>
+<!--
+    <mat-paginator #paginator1 [pageSize]="10" [pageSizeOptions]="[10, 15, 20]"
+                   showFirstLastButtons
+                   aria-label="Select page of users">
+    </mat-paginator>
+-->
 </div>
