--- a/src/main/webapp/src/app/help/help.component.html
+++ b/src/main/webapp/src/app/help/help.component.html
@@ -1,1 +1,3 @@
-<p>help works!</p>
+<p>This application will help you analyze your uploaded instagram follower/following data.
+<br>For uploads, you simply get the html for your followers or following list and paste it into a text file
+<br>Follow the detailed instructions below:</p>
